# JavaCompiler

./: CFG input file.txt  CFG.txt  CMakeLists.txt  Parsing_Table.csv1  README.md  Transition_Table.csv  lexicalOutput.txt  lexicalTests.cpp  lexical_analyzer.cpp  lexical_analyzer.h  main.cpp  parserOutput.txt  testprogram.txt
DFA/: DFA.cpp  DFA.h
LexicalAnalyzer/: lexical_analyzer.cpp  lexical_analyzer.h
LexicalAnalyzer/DFA/: DFA.cpp
LexicalAnalyzer/NFA/: NFA.h
LexicalRulesParser/: lexical_rules_generator.cpp  lexical_rules_generator.h
NFA/: NFA.cpp  NFA.h
Parser/: TopDownParser.cpp  TopDownParser.h  parser_token.cpp  parser_token.h  production_rule.cpp  production_rule.h
Parser/ParsingTable/: parser_utils.cpp  parser_utils.h
Parser/ProductionGenerator/: production_generator.cpp  production_generator.h
Tests/: lexicalTests.cpp
